<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/room_background"
        android:layout_width="375dp"
        android:layout_height="539dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/room_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/image_20"
            android:layout_width="343dp"
            android:layout_height="257dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            />

        <TextView
            android:id="@+id/room_title"
            android:layout_width="343dp"
            android:layout_height="52dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="281dp"
            android:text="@string/room_title"
            android:textAppearance="@style/room_title"
            android:lineSpacingExtra="0sp"
            android:translationY="-0.07sp"
            android:gravity="top"
            />

        <RelativeLayout
            android:id="@+id/frame_2"
            android:layout_width="123dp"
            android:layout_height="29dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="341dp"
            android:background="@drawable/frame_2">

            <TextView
                android:id="@+id/room_include_title"
                android:layout_width="103dp"
                android:layout_height="19dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:gravity="center_horizontal|top"
                android:lineSpacingExtra="0sp"
                android:text="@string/room_include_title"
                android:textAppearance="@style/room_include_title"
                android:textSize="15sp"
                android:translationY="-0.05sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/frame_6"
            android:layout_width="121dp"
            android:layout_height="29dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="147dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="341dp"
            android:background="@drawable/frame_6">

            <TextView
                android:id="@+id/conditioner_include"
                android:layout_width="101dp"
                android:layout_height="19dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:gravity="center_horizontal|top"
                android:lineSpacingExtra="0sp"
                android:text="@string/conditioner_include"
                android:textAppearance="@style/conditioner_include"
                android:textSize="15sp"
                android:translationY="-0.05sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/frame_7"
            android:layout_width="192dp"
            android:layout_height="29dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="378dp"
            android:background="@drawable/frame_7">

            <TextView
                android:id="@+id/detailed_info"
                android:layout_width="154dp"
                android:layout_height="19dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal|top"
                android:lineSpacingExtra="0sp"
                android:text="@string/detailed_info"
                android:textAppearance="@style/detailed_info"
                android:textSize="15sp"
                android:translationY="-0.05sp" />

            <RelativeLayout
                android:id="@+id/icons_icons"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp">

                <View
                    android:id="@+id/vector_55"
                    android:layout_width="6dp"
                    android:layout_height="12dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="6dp"
                    android:background="@drawable/vector_arrow_colored" />

            </RelativeLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/room_price"
            android:layout_width="140dp"
            android:layout_height="36dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="423dp"
            android:text="@string/room_price"
            android:textAppearance="@style/room_price"
            android:lineSpacingExtra="0sp"
            android:translationY="-0.1sp"
            android:gravity="top"
            />

        <TextView
            android:id="@+id/room_tour_length"
            android:layout_width="166dp"
            android:layout_height="19dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="164dp"
            android:layout_marginTop="437dp"
            android:gravity="top"
            android:lineSpacingExtra="0sp"
            android:text="@string/room_tour_length"
            android:textAppearance="@style/room_tour_length"
            android:textSize="15sp"
            android:translationY="-0.05sp" />

        <RelativeLayout
            android:id="@+id/buttons_pri"
            android:layout_width="343dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_next_screen">

            <TextView
                android:id="@+id/choose_room"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:text="@string/choose_room"
                android:textAppearance="@style/choose_room"
                android:lineSpacingExtra="-1sp"
                android:gravity="center_horizontal|center_vertical"
                />

        </RelativeLayout>



        </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>



